syntax = "proto3";
package recastx;

import "google/protobuf/empty.proto";

service ServerState {
    rpc SetState (StatePacket) returns (google.protobuf.Empty) {}
}

message StatePacket {
    enum State {
        INIT = 0;
        READY = 1;
        ACQUIRING = 2;
        PROCESSING = 3;
    }

    State state = 1;
}